# paper_query

./: .gitignore  README.md  env.yml  pyproject.toml  requirements.in
.github/workflows/: ci.yaml
src/paper_query/: __init__.py  _paper_query_v1.py  base_chatbot.py  code_query_chatbot.py  hybrid_query_chatbot.py  paper_query_chatbot.py  paper_query_plus_chatbot.py
src/paper_query/chatbots/: __init__.py  _chatbots.py  _paper_query_v0.py  _paper_query_v1.py  base.py
src/paper_query/cli/: __init__.py  _chatbot.py  _paper_query_v0.py
src/paper_query/constants/: __init__.py  _api_keys.py  _strings.py
src/paper_query/data/: __init__.py  loaders.py  processors.py
src/paper_query/llm/: __init__.py  chains.py  models.py  prompts.py
src/paper_query/rag/: retrieval.py  vectorstore.py
src/paper_query/ui/: __init__.py  _cli.py  _streamlit.py  custom_app.py  strain_relief_app.py  streamlit.py
src/paper_query/ui/components/: chat_interface.py  chatbot_selector.py  sidebar_inputs.py
src/paper_query/utils/: __init__.py  _load_api_key.py  _random_string.py
test/: conftest.py
test/chatbots/: test_chatbots.py
test/data/: test_loaders.py  test_processors.py
test/llm/: test_chains.py  test_models.py  test_prompts.py
test/rag/: test_retrieval.py  test_vectorstore.py
test/ui/: test_cli.py  test_custom_app.py  test_strain_relief_app.py  test_streamlit.py
test/ui/components/: test_chat_interface.py  test_chatbot_selector.py  test_sidebar_inputs.py
test/utils/: test_load_api_keys.py  test_random_string.py
tutorials/: langchain_chatbot_v3.ipynb
